STM32CudeIDE/.metadata/.plugins/org.eclipse.cdt.ui/Lab 2.build.log
09:39:48 **** Incremental Build of configuration Debug for project Lab 2 ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103x6 -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c:108:1: error: expected identifier or '(' before 'void'
  108 | void setTimer2(int duration)
      | ^~~~
../Core/Src/main.c:138:2: error: unknown type name 'USER'
  138 |  USER CODE END 0
      |  ^~~~
../Core/Src/main.c:138:12: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'END'
  138 |  USER CODE END 0
      |            ^~~
../Core/Src/main.c:141:5: error: stray '@' in program
  141 |   * @brief  The application entry point.
      |     ^
../Core/Src/main.c:142:5: error: stray '@' in program
  142 |   * @retval int
      |     ^
../Core/Src/main.c:589:13: warning: 'MX_GPIO_Init' defined but not used [-Wunused-function]
  589 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:544:13: warning: 'MX_TIM2_Init' defined but not used [-Wunused-function]
  544 | static void MX_TIM2_Init(void)
      |             ^~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

09:39:48 Build Failed. 6 errors, 2 warnings. (took 304ms)

